# Matrix

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  test.yml  worklow.yml
include/: doubles.hpp  matrix.hpp  real_numbers.hpp
include/Matrix/: matrix.hpp  real_numbers.hpp
src/: CMakeLists.txt  matrix.cpp
tests/: CMakeLists.txt  generate.py  matrix_unit_test.cpp
tests/answers/: answer_001.ans  answer_002.ans  answer_003.ans  answer_004.ans  answer_005.ans  answer_006.ans  answer_007.ans  answer_008.ans  answer_009.ans  answer_010.ans  answer_regression1.ans
tests/end_to_end/: generate.py  run_tests.py
tests/end_to_end/answers/: answer_002.ans  answer_005.ans  answer_006.ans  answer_007.ans  answer_008.ans  answer_009.ans  answer_010.ans
tests/end_to_end/tests_dat/: test_001.in  test_002.in  test_003.in  test_004.in  test_005.in  test_006.in  test_007.in  test_008.in  test_009.in  test_010.in
tests/tests_dat/: test_001.in  test_002.in  test_003.in  test_004.in  test_005.in  test_006.in  test_007.in  test_008.in  test_009.in  test_010.in  test_regression1.in  test_regression2.in
tests/unit/: CMakeLists.txt  matrix_unit_test.cpp
